--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -23,7 +23,7 @@
     
     <VersionPrefix>0.0.1</VersionPrefix>
     <PackageTags>GuidKit</PackageTags>
-    <Description>Create Guid v1,v3,v5,v6,v7,v8MsSql,v8SHA256,v8SHA512,NEWSEQUENTIALID,XorGuid,NumericGuid,IncrementedGuid. Convert between v1 and v6. Convert between v7 and v8MsSql. Create monotonic sequence of v7 and v8MsSql Guid's. Get Guid info.</Description>        
+    <Description>Yet another Guid library:-) Create Guid v1,v3,v5,v6,v7,v8MsSql,v8SHA256,v8SHA512,NEWSEQUENTIALID,XorGuid,NumericGuid,IncrementedGuid. Convert between v1 and v6. Convert between v7 and v8MsSql. Create monotonic sequence of v7 and v8MsSql Guid's. Get Guid info.</Description>        
 		        
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
 		              
