--- a/GuidPhantom/GuidPhantom.csproj
+++ b/GuidPhantom/GuidPhantom.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     <RootNamespace>GuidPhantom</RootNamespace>
-	  <LangVersion>9.0</LangVersion>
+	  <LangVersion>latest</LangVersion>
 	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
